<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AAC Speech</string>
    <string name="add_item">Add Item</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_text">Enter text</string>
    <string name="choose_color">Choose color</string>
    <string name="item_text">Item Text</string>
    <string name="background_color">Background Color</string>
    <string name="delete_confirmation_title">Delete Item</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this item?</string>
    <string name="item_deleted">Item deleted</string>
    <string name="please_enter_text">Please enter text</string>
    <string name="language_not_supported">Language not supported</string>
    <string name="tts_init_failed">Text-to-Speech initialization failed</string>
    <string name="widget_description">AAC Speech Grid Widget</string>
    <string name="widget_empty_text">No items yet.\nOpen the app to add items.</string>
    <string name="widget_config_title">Configure Widget</string>
    <string name="number_of_columns">Number of columns:</string>
    <string name="language_settings">Language Settings</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="german">German</string>
</resources>
